[gd_scene load_steps=6 format=3 uid="uid://b7djtpn5ev2e8"]

[ext_resource type="Script" path="res://Scripts/StartMenu.gd" id="1_u2t4r"]
[ext_resource type="PackedScene" uid="uid://d0tngdjysqc6w" path="res://Scenes/DailyPuzzleMenu.tscn" id="2_rvenu"]
[ext_resource type="PackedScene" uid="uid://ljkk4uw3q2yl" path="res://Scenes/Cursor.tscn" id="3_rlaif"]
[ext_resource type="PackedScene" uid="uid://bux15ptjmn4fy" path="res://Scenes/PuzzlebookMenu.tscn" id="3_w7g1m"]
[ext_resource type="Texture2D" uid="uid://bs4u7kuimf2s5" path="res://Sprites/Arrow.png" id="5_nwx6i"]

[node name="StartMenu" type="CanvasLayer"]
script = ExtResource("1_u2t4r")
daily_menu = ExtResource("2_rvenu")
puzzlebook_menu = ExtResource("3_w7g1m")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.941176, 0.964706, 0.941176, 1)

[node name="Title" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -168.0
offset_top = 75.0
offset_right = 168.0
offset_bottom = 127.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 52
text = "Summing Circle"

[node name="Label" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -72.0
offset_top = -105.0
offset_right = 72.0
offset_bottom = -92.0
grow_horizontal = 2
grow_vertical = 2
text = "Introduction to summoning circles"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 176.0
offset_top = 210.0
offset_right = 304.0
offset_bottom = 338.0
theme_override_constants/separation = 16

[node name="DailyPuzzleButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(128, 32)
layout_mode = 2
size_flags_vertical = 4
text = "Daily Puzzles"

[node name="PuzzlebookButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(128, 32)
layout_mode = 2
size_flags_vertical = 4
text = "Tutorial Puzzles "

[node name="HowToPlayButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(128, 32)
layout_mode = 2
size_flags_vertical = 4
text = "How To Play"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(128, 32)
layout_mode = 2
text = "Quit
"

[node name="Cursor" parent="." instance=ExtResource("3_rlaif")]
offset_left = -804.253
offset_top = 561.068
offset_right = -804.253
offset_bottom = 561.068

[node name="Label2" type="Label" parent="."]
visible = false
offset_left = 298.0
offset_top = 241.0
offset_right = 371.0
offset_bottom = 254.0
theme_override_colors/font_color = Color(0.85098, 0.341176, 0.388235, 1)
text = "learn to play"

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
offset_left = 310.0
offset_top = 252.0
offset_right = 350.0
offset_bottom = 292.0
texture = ExtResource("5_nwx6i")
stretch_mode = 2

[connection signal="pressed" from="VBoxContainer/DailyPuzzleButton" to="." method="_on_daily_puzzle_button_pressed"]
[connection signal="pressed" from="VBoxContainer/PuzzlebookButton" to="." method="_on_puzzlebook_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HowToPlayButton" to="." method="_on_how_to_play_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
